<resources>
    <string name="app_name">Flashcards</string>
    <!-- just for the sake of making it easier to keep track of, lets separate all the activity strings-->
    <!-- Login activity-->

    <string name="desc">Please login to continue</string>

    <string name="forgot">Forgot?</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Don\'t have an account? <font fgcolor="white">Sign up</font></string>
    <string name="username">Username</string>
    <string name="usernameHint">Enter username here</string>
    <string name="password">Password</string>
    <string name="passwordHint">Enter password here</string>
    <string name="title_activity_deck">DeckActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_flash_card">FlashCardActivity</string>

    <!-- Add/Edit Deck Activity -->
    <string name="edit_deck_title">Edit Deck</string>
    <string name="deck_name_hint">Deck Name</string>
    <string name="add_deck_title">Add a Deck</string>
    <string name="desc_hint">Optional Description</string>
    <string name="edit_button">Edit</string>
    <string name="colour">Pick a colour:</string>
    <string name="add_deck_button">Add Deck</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="deleteDeckString">Deleting this deck will delete all it\'s cards. Do you still want to delete it?</string>
    <string name="delete_dialog_title">Delete Deck</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="decks">Decks</string>


</resources>
